Bug 247549 - Apple.com/apple-events: Unable to enable subtitles on first watch of the keynote
Summary: Apple.com/apple-events: Unable to enable subtitles on first watch of the keynote
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-06 10:44 PST by Jer Noble
Modified: 2022-11-07 08:47 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2022-11-06 10:44:25 PST
Apple.com/apple-events: Unable to enable subtitles on first watch of the keynote
Comment 1 Jer Noble 2022-11-06 10:44:30 PST
<rdar://problem/101785175>
Comment 2 Jer Noble 2022-11-06 10:50:46 PST
Pull request: https://github.com/WebKit/WebKit/pull/6188
Comment 3 EWS 2022-11-07 08:47:26 PST
Committed 256408@main (7ff585820d47): <https://commits.webkit.org/256408@main>

Reviewed commits have been landed. Closing PR #6188 and removing active labels.